--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/white" />
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <com.zegocloud.uikit.prebuilt.call.invite.widget.ZegoSendCallInvitationButton
         android:id="@+id/voiceicon"
         android:layout_width="@dimen/_30sdp"
         android:layout_height="@dimen/_30sdp"
@@ -50,9 +50,11 @@
         android:src="@drawable/voicemail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white" />
+        app:tint="@color/white"
+        android:contentDescription="Send call invitation button" />
 
-    <androidx.appcompat.widget.AppCompatImageView
+
+    <com.zegocloud.uikit.prebuilt.call.invite.widget.ZegoSendCallInvitationButton
         android:id="@+id/videoicon"
 
         android:layout_width="@dimen/_30sdp"
@@ -63,7 +65,9 @@
         android:src="@drawable/videocamera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white" />
+        app:tint="@color/white"
+        android:contentDescription="Send call invitation button" />
+
 
     <TextView
         android:id="@+id/textName"
